refactored z-indexs but cant replicate the issue

--- a/sass/pages/home/_hero.scss
+++ b/sass/pages/home/_hero.scss
@@ -3,18 +3,18 @@
   width: 100%;
   overflow: hidden;
   background-color: #fff;
-  z-index: 10;
+  z-index: 50;
 
   &:after {
     content: '';
     position: absolute;
-    z-index: -1;
+    z-index: 5;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     background-color: #fff;
-    opacity: .9;
+    opacity: .8;
   }
 
   img {
@@ -31,6 +31,9 @@
   }
 
   .content-container {
+    position: relative;
+    z-index: 100;
+
     @include respond-to(small) {
       display: flex;
       justify-content: center;
@@ -67,8 +70,6 @@
   }
 
   .services-container {
-    position: relative;
-    z-index: 50;
     padding-top: 9em;
 
     @include respond-to(small) {
@@ -127,8 +128,6 @@
   }
 
   .callout-container {
-    position: relative;
-    z-index: 50;
     @include padding-left;
     padding-bottom: 4em;
     padding-right: 0;
@@ -151,7 +150,6 @@
 
       @include respond-to(small) {
         margin-top: 0;
-
       }
     }
 
